--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "main";
 @import "form_legend_clear";
 @import "navbar";
+@import "register";
+@import "file_preview";
