--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+}
+.navbar-brand{
+  margin-bottom: 35px;
+  padding-left: 15px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +11,52 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  padding: 0;
+  margin: 0;
+  width: 180px;
+}
+.bar_separate{
+  padding: 9px 5px;
+  font-size: 22px;
+  color: #FFBBF4;
+}
+.nav-link{
+  color: #FFBBF4;
+  font-size: 25px;
+}
+.avatar_nav{
+  height: 80px;
+}
+.avatar{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+#navbarDropdown{
+  height: 60px;
+  width: 60px;
+}
+.nav_login{
+  background-color: #58BC82;
+  text-align: center;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 12px 45px;
+  font-size: 25px;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  border-radius: 10px;
+}
+@media screen and (max-width: 600px) {
+  div.bar_separate {
+    display: none;
+  }
+  div.avatar_nav{
+    display: none;
+  }
+}
+@media screen and (min-width: 600px) {
+  #avatar_migrate{
+    display: none;
+  }
 }
