--- a/app/views/chatrooms/new.html.erb
+++ b/app/views/chatrooms/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@chatroom],
   html: {class: "d-flex"} do |f|
 %>
-  <%= f.submit "Create", class: "btn btn-primary mb-3" %>
+  <%= f.submit "Create", data: {turbo: false},class: "btn btn-primary mb-3" %>
 <% end %>
