rotas de categoria criadas

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? && current_user.role == "Avós" %>
-<% elsif !user_signed_in? %>
-<% else %>
-<%= redirect_to chatrooms_path %>
+  <%= link_to "Tenho problemas", category_index_path  %>
+<% else !user_signed_in? %>
+  <h1>pag padrao</h1>
 <% end %>
