--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,6 +23,10 @@
 .nav-link{
   color: #FFBBF4;
   font-size: 25px;
+
+  &:hover {
+    color: white;
+  }
 }
 .avatar_nav{
   height: 80px;
@@ -46,6 +50,12 @@
   text-decoration: none;
   color: white;
   border-radius: 10px;
+
+  &:hover{
+    background-color: #ffbbf4;
+    transition: 0.3s;
+    color: white;
+  }
 }
 @media screen and (max-width: 600px) {
   div.bar_separate {
