--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -4,11 +4,11 @@
   </div>
   <div class="row">
     <% @issues.each do |issue| %>
-    <div class="col-4 mt-3" id="center">
+    <div class="col-4 mt-3" id="center" data-controller="create-chat">
     </div>
     <div class="col-4 mt-3" id="center">
       <div class="card-category-long">
-        <%= link_to new_chatroom_path do %>
+        <%= link_to create_chat_path(issue: issue.id, category: issue.category.id, app: params[:app_id]), data: { 'turbo-method' => :post } do %>
           <p><%= issue.name %></p>
         <% end %>
       </div>
