--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,3 +1,12 @@
+.avatar_nav{
+  height: 55px;
+}
+.avatar{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
 .avatar {
   width: 40px;
   border-radius: 50%;
