--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -52,11 +52,13 @@
   text-decoration: none;
   color: white;
   border-radius: 10px;
+  box-shadow: var(--bs-border-color-translucent) 20px 20px 30px;
 
   &:hover{
-    background-color: #ffbbf4;
-    transition: 0.3s;
+    background-color: #20c997;
+    transition: 0.4s;
     color: white;
+    box-shadow: none;
   }
 }
 @media screen and (max-width: 600px) {
