--- a/app/assets/stylesheets/components/_main.scss
+++ b/app/assets/stylesheets/components/_main.scss
@@ -1,3 +1,77 @@
 body{
  background-color: #553B65;
 }
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+.container-flex{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.vovo-main {
+  max-width: 56vmin;
+  position: fixed;
+  bottom: 0;
+}
+
+.main-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 25px;
+  /* A tecnologia não será mais um problema 😊 */
+
+  h1{
+
+    font-family: 'Sora';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 64px;
+    line-height: 81px;
+    text-align: center;
+
+    color: #FFFFFB;
+  }
+
+  h2 {
+    font-family: 'Sora';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 38px;
+    text-align: center;
+
+    color: #FFBBF4;
+  }
+
+  .begin {
+    max-width: 400px;
+  }
+
+}
