--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -3,7 +3,8 @@
     <div class="col-6" >
       <div class="message_container"
       data-controller="chatroom-subscription"
-      data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
+      data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
+      >
         <div class="messages" data-chatroom-subscription-target="messages">
           <% if @chatroom.messages.length < 1 %>
             <div class="message">
