--- a/app/views/category/index.html.erb
+++ b/app/views/category/index.html.erb
@@ -2,14 +2,14 @@
   <div class="title">
     <h3>Preciso de ajuda com...</h3>
   </div>
-  <div class="row ">
+  <div class="row">
     <% @categories.each do |category| %>
     <div class="col-lg-4 col-md-6 col-sm-12 mt-3" id="center">
-      <div class="card-category">
-        <%= link_to category_app_index_path(category) do %>
-        <p><%= category.name %></p>
+      <button class="card-category">
+        <%= link_to category_app_index_path(category), class:"stretched-link" do %>
+          <p> <%= category.name %></p>
         <% end %>
-      </div>
+      </button>
     </div>
     <% end %>
   </div>
