--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -16,16 +16,26 @@
             <% end %>
           <% end %>
         </div>
-        <div class="form_message">
+        <div class="form_message" data-controller="message-photo">
           <%= simple_form_for [@chatroom, @message],
             html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f|
           %>
             <%= f.input :content,
               label: false,
               placeholder: "Message",
-              wrapper_html: {class: "flex-grow-1"}
+              wrapper_html: {class: "flex-grow-1", id:"form_chat"}
             %>
-            <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+
+            <div class="nels"></div>
+            <div class="d-flex">
+              <div class="send_btn">
+                <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+              </div>
+              <div class="btn-img">
+                <%= f.input :photos, label: false,id:"upload_pic" ,as: :file, input_html: { multiple: true, class: "input-photo d-none" } %>
+                <label class="icon_chat" for="message_photos"><i class="fa-solid fa-image"></i></label>
+              </div>
+            </div>
           <% end %>
         </div>
       </div>
