--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -7,10 +7,20 @@
               </div>
               <div id="message-<%= message.user == current_user ? "my" : "message" %>">
                 <% if message.user == current_user %>
-                    <p><%= message.content %></p>
+                    <div class="content_message">
+                      <p><%= message.content %></p>
+                      <% message.photos.each do |photo| %>
+                      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+                      <% end %>
+                    </div>
                     <%= cl_image_tag message.user.photo.key, class:"avatar"%>
                   <% else %>
                     <%= cl_image_tag message.user.photo.key, class:"avatar"%>
-                    <p><%= message.content %></p>
+                    <div class="content_message">
+                      <p><%= message.content %></p>
+                      <% message.photos.each do |photo| %>
+                      <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+                      <% end %>
+                    </div>
                 <% end %>
               </div>
