--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,7 +14,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  
+
   p{
     color: white;
   }
@@ -46,4 +46,9 @@
 #center{
   display: flex;
   justify-content: center;
+}
+
+.centralize{
+  margin: 0 auto;
+  width: 600px;
 }
