--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -52,3 +52,63 @@
   margin: 0 auto;
   width: 600px;
 }
+
+.card-item-chatroom {
+  position: relative;
+  background-size: cover;
+  background-color: #58BC82;
+  background-position: center;
+  width: 250px;
+  height: 180px;
+  justify-content: first baseline;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight:lighter;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  overflow-y: scroll;
+  p{
+    color: white;
+  }
+
+  h2{
+    font-weight: bold;
+  }
+
+  a{
+    text-decoration: none;
+  }
+}
+
+.category-name {
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+
+}
+
+
+.category-app-content {
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+
+}
+
+
+.category-issue {
+  font-style: italic;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+
+}
+
+.list-container::-webkit-scrollbar {
+display: none;
+
+}
