--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,8 +1,21 @@
-<h1>birinait</h1>
-<% @chatrooms.each do |chatroom| %>
-  <p><%= chatroom.grandparent.name %></p>
-  <p><%="#{chatroom.category.name} > #{chatroom.app.name} > #{chatroom.issue.name}"%></p>
-  <%= link_to join_chat_path(chatroom: chatroom.id), data: { 'turbo-method' => :put } do %>
-    <p><%= chatroom.id %></p>
-  <% end %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <% @chatrooms.each do |chatroom| %>
+      <div class="col-3">
+        <button class="card-item-chatroom">
+          <div class="item-chatroom">
+            <div class="list-container">
+              <div>
+                <h2 class= "title"><%= chatroom.grandparent.name %></h2>
+              </div>
+              <p class= "category-name"><%="#{chatroom.category.name}" %></p>
+              <p class= "category-app-content"><%="#{chatroom.app.name}" %></p>
+              <p class= "category-issue"><%="#{chatroom.issue.name}" %></p>
+              <%= link_to "Acesse o chat", join_chat_path(chatroom: chatroom.id), data: { 'turbo-method' => :put } %>
+            </div>
+          </div>
+        </button>
+      </div>
+    <% end %>
+  </div>
+</div>
