--- a/app/assets/stylesheets/components/_file_preview.scss
+++ b/app/assets/stylesheets/components/_file_preview.scss
@@ -31,3 +31,10 @@
 #upload_pic{
   display: none;
 }
+.register_pic{
+  display: flex;
+  justify-content: center;
+  img{
+    border-radius: 10px;
+  }
+}
