--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,5 +10,6 @@
 @import "headers";
 @import "dropdown_menu";
 @import "chat_box";
+@import "user_box";
 @import "forms";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap'); //Sora
