--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-6" >
+    <div class="col-lg-6 col-md-6 col-sm-12" >
       <div class="message_container"
       data-controller="chatroom-subscription"
       data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>"
@@ -40,6 +40,34 @@
         </div>
       </div>
     </div>
-    <div class="col-6"></div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="user_container">
+
+          <% if current_user == @chatroom.grandparent %>
+          <div class="user_img">
+            <%= cl_image_tag @chatroom.grandchild && @chatroom.grandchild.photo.attached? ? @chatroom.grandchild.photo.key :  ("rvkqkcff2fqbiyoj1vai") %>
+          </div>
+          <div class="user_name">
+            <h3><%= @chatroom.grandchild.name.capitalize %></h3>
+          </div>
+          <div class="description">
+          <h3>Sobre seu Netinho(a):</h3>
+            <h4><%= @chatroom.grandchild.description %></h4>
+          </div>
+          <% else %>
+          <div class="user_img">
+            <%= cl_image_tag @chatroom.grandparent.photo.key %>
+          </div>
+           <div class="user_name">
+            <h3><%= @chatroom.grandparent.name.capitalize %></h3>
+          </div>
+          <div class="description">
+            <h3>Sobre seu Avo/Avó:</h3>
+            <h4><%= @chatroom.grandparent.description %></h4>
+          </div>
+          <% end %>
+
+      </div>
+    </div>
   </div>
 </div>
