--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
 
-            <div class="nels"></div>
+            <div class="register_pic"></div>
             <%= f.input :photo,
                         label: 'Escolher Foto',
                         as: :file %>
