--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,9 @@
             <%= f.input :cpf,
                         label: 'CPF',
                         required: true %>
+                        <%= f.input :description,
+                        label: 'Descrição',
+                        required: true %>
             <%= f.input :role,
                         label: 'Vovó ou Neto?',
                         required: true, collection: ["Neto", "Avós"] %>
