--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,34 +1,56 @@
 <div class="container_register">
  <div class="register justify-content-center">
   <div class="register_content">
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= f.error_notification %>
 
-      <div class="form-inputs">
-        <%= f.input :email, required: true, autofocus: true %>
+      <div class="form-inputs" data-controller="user-image">
 
-        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-        <% end %>
+            <%= f.input :email,
+                        label: 'E-mail',
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "email" }%>
+            <%= f.input :name,
+                        label: 'Nome',
+                        required: true %>
+            <%= f.input :cpf,
+                        label: 'CPF',
+                        required: true %>
+                        <%= f.input :description,
+                        label: 'Descrição',
+                        required: true %>
+            <%= f.input :role,
+                        label: 'Vovó ou Neto?',
+                        required: true, collection: ["Neto", "Avós"] %>
+            <%= f.input :password,
+                        label: 'Senha',
+                        required: true,
+                        hint: ("Pelo menos #{@minimum_password_length} carácteres (números e/ou letras)" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password" } %>
+            <%= f.input :password_confirmation,
+                        label: 'Confirmar Senha',
+                        required: true,
+                        input_html: { autocomplete: "new-password" } %>
 
-        <%= f.input :password,
-                    hint: "leave it blank if you don't want to change it",
-                    required: false,
-                    input_html: { autocomplete: "new-password" } %>
-        <%= f.input :password_confirmation,
-                    required: false,
-                    input_html: { autocomplete: "new-password" } %>
-        <%= f.input :current_password,
+            <%= f.input :current_password,
                     hint: "we need your current password to confirm your changes",
                     required: true,
                     input_html: { autocomplete: "current-password" } %>
-      </div>
 
-      <div class="form-actions">
-        <%= f.button :submit, "Update", class:"btn btn-primary" ,id:"all_width"%>
-      </div>
+            <div class="register_pic"></div>
+            <%= f.input :photo,
+                        label: 'Escolher Foto',
+                        as: :file %>
+
+          </div>
+
+       <div class="form-actions">
+            <%= f.button :submit, "Salvar", class:"btn btn-primary btn-purple", id:"all_width"%>
+
+          </div>
     <% end %>
 <hr/>
 
