--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -112,3 +112,17 @@
 display: none;
 
 }
+.my_chat{
+  padding: 3px 7px;
+  background-color: #340053;
+  color: white;
+  font-size: 11px;
+  height: min-content;
+  border-radius: 2px;
+  position: absolute;
+  top: 5px;
+  right: 0px;
+}
+.card_idx_header{
+position: relative;
+}
