--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,6 +40,7 @@
             <div class="register_pic"></div>
             <%= f.input :photo,
                         label: 'Escolher Foto',
+                        required: true,
                         as: :file %>
 
           </div>
