--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -42,7 +42,7 @@
           <div class="d-flex">
           <div class="send_btn">
             <%# <%= f.submit "", wrapper_html: { class: 'fa-solid fa-paper-plane-top' }, class: "btn btn-primary mb-3" %>
-            <%= button_tag(type: 'submit', class: "btn btn-primary mb-3 send") do %>
+            <%= button_tag(type: 'submit', class: "btn mb-3 send") do %>
               <i class="fa-solid fa-paper-plane"></i>
             <% end %>
           </div>
