--- a/app/assets/stylesheets/components/chat_box.scss
+++ b/app/assets/stylesheets/components/chat_box.scss
@@ -120,11 +120,15 @@
 
 .send{
   margin-left: 5px;
-    border-radius: 42%;
-    background-color: #20c997;
-    border-color: #20c997;
+  border-radius: 42%;
+  background-color: #20c997;
+  border-color: #20c997;
+  color: white;
 
   &:hover{
-    background-color: white;
+    background-color: #20c997;
+    border-color: #20c997;
+    color: white;
+    opacity: 0.9;
   }
 }
