integracao de pagamento show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "register";
+@import "modal_close";
 @import "file_preview";
 @import "card";
 @import "headers";
