--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,3 +1,4 @@
+<script src="https://sdk.mercadopago.com/js/v2"></script>
 <div class="container">
   <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12" >
@@ -80,13 +81,52 @@
               <h4><%= @chatroom.grandparent.description %></h4>
             </div>
           <% end %>
+            <% if @chatroom.grandchild.nil? %>
+              <%= link_to close_chat_path(chatroom: @chatroom.id), class:"btn-cancel-chat" do %>
+                <p>Cancelar</p>
+                <i class="fa-solid fa-xmark"></i>
+              <% end %>
+            <% end %>
+            <% if @chatroom.grandparent == current_user && @chatroom.close.nil? %>
+              <div class="btn-close-chat" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <p>Encerrar chamado</p>
+                <i class="fa-regular fa-thumbs-up"></i>
+              </div>
+            <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="cho-container"></div>
+<script>
+  let mp = new MercadoPago('TEST-5f718ae1-20e0-4b20-8492-862bf131f7ac', {
+    locale: 'pt-BR'
+  });
 
-          <%= link_to  close_chat_path(chatroom: @chatroom.id), data: { 'turbo-method' => :put }, class:"btn-close-chat-container" do %>
-            <div class="btn-close-chat">
-              <p>Encerrar chamado</p>
-              <i class="fa-regular fa-thumbs-up"></i>
-            </div>
-          <% end %>
+  mp.checkout({
+    preference: {
+      id: @preference_id
+    },
+    render: {
+      container: '#cho-container',
+      label: 'Pagar',
+    }
+  });
+</script>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Seguir para o pagamento do netinho</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body d-flex justify-content-center">
+        <a id="btn_pay" href="<%= @topay %>">Paga aqui ze</a>
+      </div>
+      <div class="modal-footer">
+        <p type="button" id="btn_pay" data-bs-dismiss="modal">Voltar ao chamado</p>
       </div>
     </div>
   </div>
