--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -117,14 +117,14 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Seguir para o pagamento do netinho</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title" id="exampleModalLabel">Oba! Deu tudo certo?</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body d-flex justify-content-center">
-        <a id="btn_pay" href="<%= @topay %>">Paga aqui ze</a>
+        <a id="btn_pay" href="<%= @topay %>">Seguir para pagamento</a>
       </div>
       <div class="modal-footer">
-        <p type="button" id="btn_pay" data-bs-dismiss="modal">Voltar ao chamado</p>
+        <p type="button" id="btn_back" data-bs-dismiss="modal">Voltar ao chamado</p>
       </div>
     </div>
   </div>
