--- a/app/assets/stylesheets/components/user_box.scss
+++ b/app/assets/stylesheets/components/user_box.scss
@@ -37,6 +37,7 @@
   justify-content: center;
   width: 100%;
   background-color: #20c997;
+  border: none;
  p{
   color: white;
   padding: 10px 0 0 10px;
